--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0",
     "tailwindcss": "^3.4.9"
   }
 }
